--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="app/app.js"></script>
     <script src="app\controllers\controller.js"></script>
     <script src="app/routes/route.js"></script>
+    <script src="app\controllers\controllerNotas.js"></script>
+    <script src="app\controllers\controllerBoletim.js"></script>
 </head>
 
 <body>
@@ -23,8 +25,9 @@
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-                <li><a href="#/cadastro"><span class="glyphicon glyphicon-book"></span> Cadastro</a></li>
-                <li><a href="#/boletim"><span class="glyphicon glyphicon-comment"></span> Boletim</a></li>
+                <li><a href="#/cadastro"><span class="glyphicon glyphicon-pencil"></span> Cadastro</a></li>
+                <li><a href="#/notas"><span class="glyphicon glyphicon-list"></span> Notas</a></li>
+                <li><a href="#/boletim"><span class="glyphicon glyphicon-book"></span> Boletim</a></li>
             </ul>
         </div>
     </nav>
